changed a ton of stuff

--- a/code/services/templates/exercise.html
+++ b/code/services/templates/exercise.html
@@ -57,16 +57,21 @@
                         Hybrid curl 50x <br>
                         Overhead press 50x <br>
                         Crunch 100x <br>
+                        Incline bench 100x <br>
+                        Bent over row 50x <br>
+                        pull up 32x
                     </p>
                 </div>
             </div>
             <div class="dayLeft">
                 <div class="exerciseBox">
                     <p>
-                        Tricep curl 75x <br>
+                        Side lat raises 50x<br>
+                        dumbell flye 32x <br>
+                        crunches 100x <br>
                         Overhead press 50x <br>
-                        Diamond push up 50x <br>
-                        Crunch 100x <br>
+                        Bent over row 50x <br>
+                        pull up 32x
                     </p>
                 </div>
                 <div class="dayText">
@@ -78,13 +83,16 @@
         <div class="dayRight">
             <div class="dayText">
                 <h1>Wednesday</h1>
-                <p>Shoulders</p>
+                <p>Triceps</p>
             </div>
             <div class="exerciseBox">
                 <p>
-                    Lateral raises 50x <br>
-                    Overhead press 50x <br>
-                    Crunch 100x <br>
+                    Tricep curl 50x <br>
+                    Military press 50x <br>
+                    push ups 48x <br>
+                    crunches 100x <br>
+                    Bent over row 50x <br>
+                    pull up 32x <br>
                 </p>
             </div>
         </div>
@@ -95,6 +103,9 @@
                     Hybrid curl 50x <br>
                     Overhead press 50x <br>
                     Crunch 100x <br>
+                    Incline bench 100x <br>
+                    Bent over row 50x <br>
+                    pull up 32x
                 </p>
             </div>
             <div class="dayText">
@@ -109,18 +120,23 @@
             </div>
             <div class="exerciseBox">
                 <p>
-                    Tricep curl 50x <br>
-                    diamond push up 50x <br>
+                    Side lat raises 50x<br>
+                    dumbell flye 32x <br>
+                    crunches 100x <br>
                     Overhead press 50x <br>
-                    Crunch 100x <br>
+                    Bent over row 50x <br>
+                    pull up 32x
                 </p>
             </div>
         </div>
         <div class="dayLeft">
             <div class="exerciseBox">
                 <p>
-                    pull up 50x <br>
-                    Crunch 100x <br>
+                    Tricep curl 50x <br>
+                    Military press 50x <br>
+                    push ups 48x <br>
+                    crunches 100x <br>
+                    pull up 32x <br>
                 </p>
             </div>
             <div class="dayText">
@@ -135,8 +151,9 @@
             </div>
             <div class="exerciseBox">
                 <p>
-                    Jump squats 100x <br>
-                    Calf raises 100x <br>
+                    calf raises 100x <br>
+                    squats 100x <br>
+                    crunches 100x <br>
                 </p>
             </div>
         </div>
