--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -114,18 +114,23 @@
                                 Experience
                             </h3>
                             <p>
-                                <span>Webapp developer and Cofounder</span> 
-                                <a href="https://pycalc.com" target="_blank">@Pycalc X</a><br>
+
+                                <span>Founder</span> <br>
+                                <a href="https://resonance-website.sentientplatypu.repl.co" target="_blank">@Resonance</a><br>
+                                2022 - now <br><br>  
+
+                                <span>Webapp developer + Cofounder</span> <br>
+                                <a href="https://pycalcx.bss.design" target="_blank">@Pycalc X</a><br>
                                 2021 - now <br><br>  
 
                                 <span>Freelance</span> <br>
                                 2021 - now      <br><br>    
 
-                                <span>Datascience Research project</span> 
+                                <span>Datascience project + Contributor</span> 
                                 <a href="https://codebozu.com" target="_blank">@CodeBozu</a><br>
                                 2021 <br><br>
 
-                                <span>Video editor and main developer</span> 
+                                <span>Video editor + main developer</span> 
                                 <a href="https://debating404.com" target="_blank">@Debating404</a><br>
                                 2022 - now <br><br>  
                                 
@@ -198,7 +203,7 @@
                     </div>
                     <div class="ProductCarousel">
                         <div class="ProductTile">
-                            <a href="pycalc.com">
+                            <a href="https://pycalcx.bss.design/service-page.html">
                                 <div class="ProductItem" id="Calcom">
                                     <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="Calcom">
                                     <h3>
@@ -211,7 +216,7 @@
                             </a>
                         </div>
                         
-                        <div class="ProductTile">
+                        <!-- <div class="ProductTile">
                             <a href="https://discord.com/api/oauth2/authorize?client_id=822265614244511754&permissions=8&scope=bot">
                                 <div class="ProductItem" id="Amoris">
                                     <img src="https://cdn.discordapp.com/avatars/822265614244511754/61cdc288c07c18e83082e538e5ca6671.webp?size=1024" alt="Amoris">
@@ -223,7 +228,7 @@
                                     </p>
                                 </div>
                             </a>
-                        </div>
+                        </div> -->
                        
                         <div class="ProductTile">
                             <a href="https://www.spigotmc.org/resources/lives-smp.96177/">
@@ -250,9 +255,9 @@
                     </div>
                     <div class="ProjectCarousel">
                         <div class="ProjectTile">
-                            <a href="docs.google.com/document/d/1_yqAvAPJ5UYAn3vQuKAiG6M5FvJACrHMLZhiMXVHW5s/export/pdf">
+                            <a href="https://github.com/CRRobotics/2022Visions">
                                 <div class="ProjectItem" id="CodeRedRoboticsVision">
-                                    <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="Calcom">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3EURTS-5KsvytlOk1trnXROTfInsFNgWu2mMaIi46vCPeOvqotcnvmXespd5OYpmAnKc&usqp=CAU" alt="CODE RED">
                                     <h3>
                                         Rapid React Robot Vision
                                     </h3>
@@ -263,7 +268,7 @@
                             </a>
                         </div>
                         <div class="ProjectTile">
-                            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
+                            <a href="https://github.com/SentientPlatypus/SocialCredit">
                                 <div class="ProjectItem" id="PROIHS">
                                     <img src="https://cdn.britannica.com/90/7490-004-BAD4AA72/Flag-China.jpg" alt="Peoples republic of IHS">
                                     <h3>
@@ -276,7 +281,7 @@
                             </a>
                         </div>
                         <div class="ProjectTile">
-                            <a href="http://codebozu.com/">
+                            <a href="https://github.com/SentientPlatypus/BozuBot/blob/main/README.md">
                                 <div class="ProjectItem" id="BozuBot">
                                     <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFmTZ4t_b7H8A/company-logo_200_200/0/1639364471276?e=2159024400&v=beta&t=tf8UFG64VrtNFu7wH-mLfuZX2Re0gH7cNt-TzuirvGs" alt="CodeBozu">
                                     <h3>
@@ -289,7 +294,7 @@
                             </a>
                         </div>
                         <div class="ProjectTile">
-                            <a href="http://sentientplatypus.pythonanywhere.com/underConstruction">
+                            <a href="https://github.com/SentientPlatypus/Advanced-AI-Visions/tree/main/Hand%20tracker">
                                 <div class="ProjectItem" id="ReflexTesting">
                                     <img src="https://www.vhv.rs/dpng/d/259-2592088_blue-circle-png-pictures-blue-eat-circle-transparent.png" alt="ReflexTesting">
                                     <h3>
@@ -326,9 +331,9 @@
                     </div>
                     <div class="PaperCarousel">
                         <div class="PaperTile">
-                            <a href="docs.google.com/document/d/1_yqAvAPJ5UYAn3vQuKAiG6M5FvJACrHMLZhiMXVHW5s/export/pdf">
+                            <a href="https://docs.google.com/document/d/1WYECR4K3D5pkXqElIejt85lPNybWfgzisJbbccgZQFE/export?/format=pdf">
                                 <div class="PaperItem" id="CodeRedRoboticsVision">
-                                    <img src="https://pbs.twimg.com/profile_images/1350201636354977793/8etruElX_400x400.jpg" alt="Calcom">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3EURTS-5KsvytlOk1trnXROTfInsFNgWu2mMaIi46vCPeOvqotcnvmXespd5OYpmAnKc&usqp=CAU" alt="CODE RED">
                                     <h3>
                                         Rapid React Robot Vision
                                     </h3>
@@ -362,7 +367,7 @@
                     </div>
                     <div class="InProgressCarousel">
                         <div class="InProgressTile">
-                            <a href="">
+                            <a href="https://resonance-website.sentientplatypu.repl.co">
                                 <div class="InProgressItem" id="Foresight">
                                     <img src="{{ url_for('static',filename='LOGONOTEXT.png') }}" alt="Foresight">
                                     <h3>
@@ -375,7 +380,7 @@
                             </a>
                         </div>
                         <div class="InProgressTile">
-                            <a href="pycalc.com">
+                            <a href="https://pycalcx.bss.design/service-page.html">
                                 <div class="InProgressItem" id="TeachX">
                                     <img src="https://static.wixstatic.com/media/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.png/v1/fill/w_560,h_352,al_c,q_85,usm_0.66_1.00_0.01/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.webp" alt="TeachX">
                                     <h3>
@@ -427,7 +432,7 @@
                 Pleasure
             </p>
             <p class="valueText">
-                Kiss me more.
+                Heart attacks in broken waves.
             </p>
         </div>
         </div>
@@ -503,13 +508,13 @@
                         <textarea autocomplete="off" cols="30" rows="10" id="content" placeholder="message" name="content" required></textarea>
                         <input type="submit" value="send()" class="submitbutton">
                     </form>
-                    <script>
+                    <!-- <script>
                         document.querySelector(".ContactMeForm").addEventListener("submit", function(e){
                             alert("SENT");
                             var submitButton = document.querySelector(".submitbutton");
                             e.preventDefault();
                         })
-                    </script>
+                    </script> -->
                 </div>
             </div>
         </section>
