--- a/code/services/templates/socials.html
+++ b/code/services/templates/socials.html
@@ -61,7 +61,7 @@
                     <img src="https://wallpapercave.com/wp/wp6647753.png" alt="Discord">
                     <div class="caption">
                         <p>
-                            <span>Discord @SentientPlatypue#1332</span> <br>
+                            <span>Discord @SentientPlatypus#1332</span> <br>
                             """At my worst."""
                         </p>
                     </div>
