--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -281,7 +281,7 @@
                             </a>
                         </div>
                         <div class="ProjectTile">
-                            <a href="https://github.com/SentientPlatypus/BozuBot/blob/main/README.md">
+                            <a href="https://github.com/SentientPlatypus/BozuBot">
                                 <div class="ProjectItem" id="BozuBot">
                                     <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFmTZ4t_b7H8A/company-logo_200_200/0/1639364471276?e=2159024400&v=beta&t=tf8UFG64VrtNFu7wH-mLfuZX2Re0gH7cNt-TzuirvGs" alt="CodeBozu">
                                     <h3>
