--- a/code/services/templates/socials.html
+++ b/code/services/templates/socials.html
@@ -47,7 +47,9 @@
         <div class="PleasureBox">
             <div class="LeftCol">
                 <div class="PleasureItem">
-                    <img src="{{ url_for('static',filename='github.png') }}" alt="Github">
+                    <a href="https://github.com/SentientPlatypus">
+                        <img src="{{ url_for('static',filename='github.png') }}" alt="Github">
+                    </a>
                     <div class="caption">
                         <p>
                             <span>Github @SentientPlatypus</span> <br>
