--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -66,6 +66,7 @@
                             I have been a computer science enthusiast. 
                             I have worked on several projects and have experience collaborating with fellow developers.”””
                         </p> 
+                        <a href="https://github.com/SentientPlatypus" target="_blank"><i class="fa-brands fa-github fa-2x socialsIcon"></i></a>
                     </div>
                     <div class="Info">
                         <div class="mainSkills">
@@ -126,15 +127,15 @@
                                 <span>Freelance</span> <br>
                                 2021 - now      <br><br>    
 
-                                <span>Datascience project + Contributor</span> 
+                                <span>Datascience project + Contributor</span> <br>
                                 <a href="https://codebozu.com" target="_blank">@CodeBozu</a><br>
                                 2021 <br><br>
 
-                                <span>Video editor + main developer</span> 
+                                <span>Video editor + main developer</span> <br>
                                 <a href="https://debating404.com" target="_blank">@Debating404</a><br>
                                 2022 - now <br><br>  
                                 
-                                <span>Visions Member</span> 
+                                <span>Visions Member</span> <br>
                                 <a href="https://team639.org" target="_blank">@Code Red</a><br>
                                 2021 - now <br><br>       
                             </p>
@@ -191,19 +192,32 @@
                         me.<span class="function">Work</span>()
                     </h1>
                     <p>
-                        “””Products, Projects, Papers, and Future.”””
+                        “””Catch me if I fall.”””
                     </p> 
                 </div>
-                <div class="Products">
-                    <div class="ProductHeader">
+                <div class="Projects">
+                    <div class="ProjectHeader">
                         <p>
-                            <span class="subHeader">me.<span class="function">Products</span>()</span> <br>
-                            “””Larger scale products you can take advantage of in a few clicks.”””
+                            <span class="subHeader">me.<span class="function">Projects</span>()</span> <br>
+                            ”””Non marketable projects.”””
                         </p>
                     </div>
-                    <div class="ProductCarousel">
+                    <div class="ProjectCarousel">
+                        <div class="ProjectTile">
+                            <a href="https://github.com/CRRobotics/2022Visions" target="_blank">
+                                <div class="ProjectItem" id="CodeRedRoboticsVision">
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3EURTS-5KsvytlOk1trnXROTfInsFNgWu2mMaIi46vCPeOvqotcnvmXespd5OYpmAnKc&usqp=CAU" alt="CODE RED">
+                                    <h3>
+                                        Rapid React Robot Vision
+                                    </h3>
+                                    <p>
+                                        "FRC 2022"
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
                         <div class="ProductTile">
-                            <a href="https://pycalcx.bss.design/service-page.html">
+                            <a href="https://pycalcx.bss.design/service-page.html" target="_blank">
                                 <div class="ProductItem" id="Calcom">
                                     <img src="https://static.wixstatic.com/media/a8c221_e651c0f32307486191c3d5793870b8c3~mv2.png/v1/fill/w_646,h_406,al_c,lg_1,q_85/logo.webp" alt="Calcom">
                                     <h3>
@@ -231,7 +245,7 @@
                         </div> -->
                        
                         <div class="ProductTile">
-                            <a href="https://www.spigotmc.org/resources/lives-smp.96177/">
+                            <a href="https://www.spigotmc.org/resources/lives-smp.96177/" target="_blank">
                                 <div class="ProductItem" id="Lives SMP">
                                     <img src="https://ih1.redbubble.net/image.927840418.5711/pp,840x830-pad,1000x1000,f8f8f8.jpg" alt="Lives SMP">
                                     <h3>
@@ -244,31 +258,8 @@
                             </a>
                         </div>
 
-                    </div>
-                </div>
-                <div class="Projects">
-                    <div class="ProjectHeader">
-                        <p>
-                            <span class="subHeader">me.<span class="function">Projects</span>()</span> <br>
-                            ”””Non marketable projects.”””
-                        </p>
-                    </div>
-                    <div class="ProjectCarousel">
                         <div class="ProjectTile">
-                            <a href="https://github.com/CRRobotics/2022Visions">
-                                <div class="ProjectItem" id="CodeRedRoboticsVision">
-                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3EURTS-5KsvytlOk1trnXROTfInsFNgWu2mMaIi46vCPeOvqotcnvmXespd5OYpmAnKc&usqp=CAU" alt="CODE RED">
-                                    <h3>
-                                        Rapid React Robot Vision
-                                    </h3>
-                                    <p>
-                                        "FRC 2022"
-                                    </p>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="ProjectTile">
-                            <a href="https://github.com/SentientPlatypus/SocialCredit">
+                            <a href="https://github.com/SentientPlatypus/SocialCredit" target="_blank">
                                 <div class="ProjectItem" id="PROIHS">
                                     <img src="https://cdn.britannica.com/90/7490-004-BAD4AA72/Flag-China.jpg" alt="Peoples republic of IHS">
                                     <h3>
@@ -281,7 +272,7 @@
                             </a>
                         </div>
                         <div class="ProjectTile">
-                            <a href="https://github.com/SentientPlatypus/BozuBot">
+                            <a href="https://github.com/SentientPlatypus/BozuBot" target="_blank">
                                 <div class="ProjectItem" id="BozuBot">
                                     <img src="https://media-exp1.licdn.com/dms/image/C4D0BAQFmTZ4t_b7H8A/company-logo_200_200/0/1639364471276?e=2159024400&v=beta&t=tf8UFG64VrtNFu7wH-mLfuZX2Re0gH7cNt-TzuirvGs" alt="CodeBozu">
                                     <h3>
@@ -294,7 +285,7 @@
                             </a>
                         </div>
                         <div class="ProjectTile">
-                            <a href="https://github.com/SentientPlatypus/Advanced-AI-Visions/tree/main/Hand%20tracker">
+                            <a href="https://github.com/SentientPlatypus/Advanced-AI-Visions/tree/main/Hand%20tracker" target="_blank">
                                 <div class="ProjectItem" id="ReflexTesting">
                                     <img src="https://www.vhv.rs/dpng/d/259-2592088_blue-circle-png-pictures-blue-eat-circle-transparent.png" alt="ReflexTesting">
                                     <h3>
@@ -307,7 +298,7 @@
                             </a>
                         </div>
                         <div class="ProjectTile">
-                            <a href="https://github.com/Sleek-Snails/Snail-Snacks">
+                            <a href="https://github.com/Sleek-Snails/Snail-Snacks" target="_blank">
                                 <div class="ProjectItem" id="puzzles">
                                     <img src="https://hips.hearstapps.com/amv-prod-gp.s3.amazonaws.com/gearpatrol/wp-content/uploads/2020/04/How-To-Get-Better-At-Puzzles-gear-patrol-lead-feature-V2.jpg" alt="puzzles">
                                     <h3>
@@ -367,7 +358,7 @@
                     </div>
                     <div class="InProgressCarousel">
                         <div class="InProgressTile">
-                            <a href="https://resonance-website.sentientplatypu.repl.co">
+                            <a href="https://resonance-website.sentientplatypu.repl.co" target="_blank">
                                 <div class="InProgressItem" id="Foresight">
                                     <img src="{{ url_for('static',filename='LOGONOTEXT.png') }}" alt="Foresight">
                                     <h3>
@@ -380,7 +371,7 @@
                             </a>
                         </div>
                         <div class="InProgressTile">
-                            <a href="https://pycalcx.bss.design/service-page.html">
+                            <a href="https://pycalcx.bss.design/service-page.html" target="_blank">
                                 <div class="InProgressItem" id="TeachX">
                                     <img src="https://static.wixstatic.com/media/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.png/v1/fill/w_560,h_352,al_c,q_85,usm_0.66_1.00_0.01/a8c221_4e1f5aa42d0b420f973891894b2bb07a~mv2.webp" alt="TeachX">
                                     <h3>
@@ -465,7 +456,7 @@
             </div>
             <div class="RightCol">
                 <div class="PleasureItem">
-                    <a href="https://open.spotify.com/user/28mvp5mi4u4ez5ks3s0jhxqtq?si=a9f79588cb264dd5">
+                    <a href="https://open.spotify.com/user/28mvp5mi4u4ez5ks3s0jhxqtq?si=a9f79588cb264dd5" target="_blank">
                         <img src="https://i.pinimg.com/736x/4b/8b/85/4b8b8583bae65eb0d0dc1b7bb6685f2c.jpg" alt="Music">
                     </a>
                     <div class="caption">
