--- a/code/services/templates/index.html
+++ b/code/services/templates/index.html
@@ -94,10 +94,11 @@
                                 Python,<br>  
                                 Java,<br>  
                                 HTML/CSS/JS,<br>  
+                                Rust <br>
                                 Unreal Engine,<br>  
                                 Blender,      <br> 
-                                C# <br>
                                 MongoDB,<br>  
+                                Latex <br>
                                 Flask <br>
                                 GPT-3,<br>  
                                 OpenCV,<br>  
@@ -204,6 +205,19 @@
                         </p>
                     </div>
                     <div class="ProjectCarousel">
+                        <div class="ProjectTile">
+                            <a href="https://Self-Driving-Car-Simulation.sentientplatypu.repl.co" target="_blank">
+                                <div class="ProjectItem" id="CodeRedRoboticsVision">
+                                    <img src="{{ url_for('static',filename='selfdrivingcar.png') }}" alt="CODE RED">
+                                    <h3>
+                                        Neural Network Car Sim
+                                    </h3>
+                                    <p>
+                                        "Way more trig than expected"
+                                    </p>
+                                </div>
+                            </a>
+                        </div>
                         <div class="ProjectTile">
                             <a href="https://github.com/CRRobotics/2022Visions" target="_blank">
                                 <div class="ProjectItem" id="CodeRedRoboticsVision">
