fixed styling issues for now

--- a/code/services/static/styles/indexStyles.css
+++ b/code/services/static/styles/indexStyles.css
@@ -175,6 +175,13 @@ body {
     top: calc(50% - .5em); /* 50% - 3/4 of icon height */
 }
 
+@media (max-width:1080px)
+{
+    i.valueIcon {
+        visibility: hidden;
+    }
+}
+
 
 .TitleBox p {
 width: 70vmax;
@@ -234,15 +241,13 @@ color: #FFFFFF;
 {
     .AboutMe {
         display: block;
-        height: 160vmax;
+        height: auto;
         margin-bottom: 20vmax;
     }
     .AboutMe .AboutMeContainer .AboutMe {
         width: 90vw;
     }
-    .AboutMe .AboutMeContainer .AboutMeText *{
-        width: 90vw;
-    }
+
     .Visuals .Img img {
         width: 80vmin;
         height: 80vmin;
@@ -252,7 +257,7 @@ color: #FFFFFF;
     }
     .AboutMe .Visuals{
         width: 80vmin;
-        height: 80vmin;
+        height: auto;
         margin-left: 0px;
     }
 
@@ -365,7 +370,7 @@ color: #FFFFFF;
     font-family: 'Roboto Mono';
     font-style: normal;
     font-weight: 700;
-    font-size: 72px;
+    font-size: 50px;
     line-height: 95px;
     
     color: #FFFFFF;
@@ -762,8 +767,12 @@ color: #FFFFFF;
     top: 25vmin;
     left:5vw;
     width: 70vw;
-    height: 60vmin;
-    margin-bottom: 50vmin;
+    height: auto;
+    margin-bottom: 50vh;
+}
+
+.contact {
+    height:auto;
 }
 
 .contact .ContactMe .contactText h1 {
@@ -779,7 +788,7 @@ color: #FFFFFF;
     font-family: 'Roboto Mono';
     font-style: normal;
     font-weight: 700;
-    font-size: 60px;
+    font-size: 50px;
     line-height: 95px;
     
     color: #FFFFFF;
@@ -922,7 +931,38 @@ color: #FFFFFF;
     transform: rotate(-90deg) translateX(-3px);
   }
 
+  footer {
+    background-color: #1e1f1c;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 12vh;
+    width: 100vw;
+  }
 
+  footer h1 {
+    width: 100%;
+    height: 107px;
+    left: 9px;
+    top: 12px;
+    text-decoration: none;
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 95px;
+    
+    color: #FFFFFF;
+  }
+
+  .fa-rust {
+    color: white;
+    margin-left: auto;
+  }
 
 
 
