--- a/code/services/static/styles/indexStyles.css
+++ b/code/services/static/styles/indexStyles.css
@@ -298,31 +298,6 @@ color: #FFFFFF;
     .AboutMe .quote {
         width: 80vmin;
     }
-    
-
-    .ContactMe .ContactMeForm .identity {
-        width: 100%;
-        text-align: center;
-        display: block;
-        margin-bottom: 0px;
-    }
-    
-    .ContactMeForm .identity #name,  .ContactMeForm .identity #email{
-        font-size: 18px;
-        border: none;
-        outline: none;
-        text-decoration: none;
-        border-radius:1vmin;
-        color: white;
-        background-color: #1e1f1c;
-        width: 45%;
-        height: 7vh;
-
-        margin-left: 0px;
-        margin-bottom: 5vmin;
-    }
-    
-
 }
 
 .AboutMe .AboutMeText {
@@ -334,7 +309,7 @@ color: #FFFFFF;
 }
 
 .AboutMeContainer{
-    width: 60%;
+    width: auto;
 }
 
 .AboutMeTextContainer {
@@ -694,6 +669,21 @@ color: #FFFFFF;
     height: auto;
 }
 
+@media (max-width:580px)
+{
+    div.PleasureBox{
+        display: block;
+    }
+
+    div.LeftCol, div.RightCol {
+        width: 90vw;
+        margin: 0px;
+    }
+}
+
+
+
+
 .PleasureBox {
     position: relative;
     width: 90vw;
@@ -762,6 +752,9 @@ color: #FFFFFF;
 }
 
 
+
+
+
 .ContactMe {
     position: relative;
     top: 25vmin;
@@ -806,8 +799,22 @@ color: #FFFFFF;
 .ContactMeForm {
     border: white;
 }
+@media (max-width:395px)
+{
+    .ContactMeForm div.identity{
+        display: block;
+    }
 
-
+    input#name {
+        width: 100%;
+        margin: 0px;
+    }
+    input#email {
+        width: 100%;
+        margin: 0px;
+        margin-top: 5vmin;
+    }
+}
 .ContactMeForm .identity {
     width: 100%;
     text-align: center;
