--- a/rocket_code/static/styles/indexStyles.css
+++ b/rocket_code/static/styles/indexStyles.css
@@ -600,6 +600,7 @@ color: #FFFFFF;
     justify-content: center;
     text-align: center;
     left: calc(50% - 238px/2);
+    cursor: pointer;
     
 
 }
@@ -708,7 +709,7 @@ color: #FFFFFF;
 
 
 .PleasureItem {
-    width: 85vw;
+    width: 100%;
     height: 125vh;
 }
 
@@ -925,6 +926,133 @@ color: #FFFFFF;
   }
   
   
+
+
+.hidden {
+    display: none;
+}
+
+.popup {
+    width: 50vw;
+    height: auto;
+    background: #1e1f1c;
+    border-radius: 20px;
+    position: fixed;
+    top: 10vh;
+    left: 25vw;
+    padding: 1.5%;
+}
+
+@media (max-width:480px)
+{
+    div.popup {
+        width: 80vw;
+        left: 10vw;
+    }
+}
+
+.popupBanner {
+    width: 100%;
+    max-height: 300px;
+    text-align: center;
+}
+
+.popup .popupBanner img {
+    max-width: 100%;
+    width: auto;
+    height: auto;
+}
+
+.popup p {
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    color: #FFE600;
+}
+
+.popup .popupContent {
+    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+.popup h3 {
+    width: 100%;
+    height: 10px;
+    left: 48px;
+    top: 200px;
+    font-family: 'Roboto Mono';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+    text-align: left;
+    color: #FFFFFF;
+    height: auto;
+}
+
+.popup h3.title {
+    text-align: center;
+    margin-bottom: 0px;
+}
+
+.X {
+    color: #FFE600;
+    transition: all 0.3s;
+}
+
+.X:hover {
+    color: #DB00FF;
+    cursor: pointer;
+}
+
+.xContainer {
+    width: 15%;
+    text-align: center;
+    padding-top: 2.5vh;
+}
+
+.background {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+
+.popupHead {
+    display: flex;
+    vertical-align: top;
+}
+
+.popupHead h3 {
+    width: 85%;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   /* Click Animation */
   .wrapper.is-active {
     transform: rotate(-45deg);  
@@ -937,6 +1065,15 @@ color: #FFFFFF;
   .is-active .line-menu.end {
     transform: rotate(-90deg) translateX(-3px);
   }
+
+
+
+
+
+
+
+
+
 
   footer {
     background-color: #1e1f1c;
